woven/WovenParser.py
# Generated from woven/Woven.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class WovenParser ( Parser ):

    grammarFileName = "Woven.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'function'", "'class'", "'extends'", 
                     "'init'", "'self'", "'super'", "'virtual'", "'new'", 
                     "'list'", "'int'", "'float'", "'string'", "'bool'", 
                     "'void'", "'if'", "'else'", "'for'", "'while'", "'return'", 
                     "'print'", "'break'", "'continue'", "'try'", "'catch'", 
                     "'throw'", "'true'", "'false'", "'null'", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "':'", "';'", "','", "'='", 
                     "'.'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", "'<='", 
                     "'>'", "'>='", "'=='", "'!='", "'and'", "'or'", "'!'" ]

    symbolicNames = [ "<INVALID>", "FUNCTION", "CLASS", "EXTENDS", "INIT", 
                      "SELF", "SUPER", "VIRTUAL", "NEW", "LIST", "INT", 
                      "FLOAT", "STRING", "BOOL", "VOID", "IF", "ELSE", "FOR", 
                      "WHILE", "RETURN", "PRINT", "BREAK", "CONTINUE", "TRY", 
                      "CATCH", "THROW", "TRUE", "FALSE", "NULL", "LPAREN", 
                      "RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", 
                      "COLON", "SEMI", "COMMA", "ASSIGN", "DOT", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "LT", "LE", "GT", "GE", 
                      "EQ", "NE", "AND", "OR", "NOT", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "HASH_COMMENT", "IDENTIFIER", "INT_LITERAL", "FLOAT_LITERAL", 
                      "STRING_INTERP", "STRING_LITERAL", "SKIP_NEWLINE", 
                      "NEWLINE", "WS", "INDENT", "DEDENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_simpleStmt = 2
    RULE_compoundStmt = 3
    RULE_functionDecl = 4
    RULE_paramList = 5
    RULE_param = 6
    RULE_returnType = 7
    RULE_varDecl = 8
    RULE_typeName = 9
    RULE_listType = 10
    RULE_block = 11
    RULE_ifStmt = 12
    RULE_forStmt = 13
    RULE_forInit = 14
    RULE_forUpdate = 15
    RULE_whileStmt = 16
    RULE_tryStmt = 17
    RULE_classDecl = 18
    RULE_classBody = 19
    RULE_classMember = 20
    RULE_fieldDecl = 21
    RULE_constructorDecl = 22
    RULE_methodDecl = 23
    RULE_returnStmt = 24
    RULE_printStmt = 25
    RULE_breakStmt = 26
    RULE_continueStmt = 27
    RULE_throwStmt = 28
    RULE_assignment = 29
    RULE_selfAssignment = 30
    RULE_indexAssignment = 31
    RULE_exprStmt = 32
    RULE_expr = 33
    RULE_orExpr = 34
    RULE_andExpr = 35
    RULE_compExpr = 36
    RULE_atom = 37
    RULE_argList = 38
    RULE_literal = 39

    ruleNames =  [ "program", "statement", "simpleStmt", "compoundStmt", 
                   "functionDecl", "paramList", "param", "returnType", "varDecl", 
                   "typeName", "listType", "block", "ifStmt", "forStmt", 
                   "forInit", "forUpdate", "whileStmt", "tryStmt", "classDecl", 
                   "classBody", "classMember", "fieldDecl", "constructorDecl", 
                   "methodDecl", "returnStmt", "printStmt", "breakStmt", 
                   "continueStmt", "throwStmt", "assignment", "selfAssignment", 
                   "indexAssignment", "exprStmt", "expr", "orExpr", "andExpr", 
                   "compExpr", "atom", "argList", "literal" ]

    EOF = Token.EOF
    FUNCTION=1
    CLASS=2
    EXTENDS=3
    INIT=4
    SELF=5
    SUPER=6
    VIRTUAL=7
    NEW=8
    LIST=9
    INT=10
    FLOAT=11
    STRING=12
    BOOL=13
    VOID=14
    IF=15
    ELSE=16
    FOR=17
    WHILE=18
    RETURN=19
    PRINT=20
    BREAK=21
    CONTINUE=22
    TRY=23
    CATCH=24
    THROW=25
    TRUE=26
    FALSE=27
    NULL=28
    LPAREN=29
    RPAREN=30
    LBRACK=31
    RBRACK=32
    LBRACE=33
    RBRACE=34
    COLON=35
    SEMI=36
    COMMA=37
    ASSIGN=38
    DOT=39
    ADD=40
    SUB=41
    MUL=42
    DIV=43
    MOD=44
    LT=45
    LE=46
    GT=47
    GE=48
    EQ=49
    NE=50
    AND=51
    OR=52
    NOT=53
    BLOCK_COMMENT=54
    LINE_COMMENT=55
    HASH_COMMENT=56
    IDENTIFIER=57
    INT_LITERAL=58
    FLOAT_LITERAL=59
    STRING_INTERP=60
    STRING_LITERAL=61
    SKIP_NEWLINE=62
    NEWLINE=63
    WS=64
    INDENT=65
    DEDENT=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(WovenParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(WovenParser.NEWLINE)
            else:
                return self.getToken(WovenParser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WovenParser.StatementContext)
            else:
                return self.getTypedRuleContext(WovenParser.StatementContext,i)


        def getRuleIndex(self):
            return WovenParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = WovenParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -4746791805020881050) != 0):
                self.state = 82
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [63]:
                    self.state = 80
                    self.match(WovenParser.NEWLINE)
                    pass
                elif token in [1, 2, 5, 6, 8, 9, 10, 11, 12, 13, 15, 17, 18, 19, 20, 21, 22, 23, 25, 26, 27, 28, 29, 31, 41, 53, 57, 58, 59, 60, 61]:
                    self.state = 81
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(WovenParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compoundStmt(self):
            return self.getTypedRuleContext(WovenParser.CompoundStmtContext,0)


        def simpleStmt(self):
            return self.getTypedRuleContext(WovenParser.SimpleStmtContext,0)


        def getRuleIndex(self):
            return WovenParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = WovenParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 15, 17, 18, 23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.compoundStmt()
                pass
            elif token in [5, 6, 8, 9, 10, 11, 12, 13, 19, 20, 21, 22, 25, 26, 27, 28, 29, 31, 41, 53, 57, 58, 59, 60, 61]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.simpleStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(WovenParser.VarDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(WovenParser.AssignmentContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(WovenParser.ReturnStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(WovenParser.PrintStmtContext,0)


        def selfAssignment(self):
            return self.getTypedRuleContext(WovenParser.SelfAssignmentContext,0)


        def indexAssignment(self):
            return self.getTypedRuleContext(WovenParser.IndexAssignmentContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(WovenParser.ExprStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(WovenParser.BreakStmtContext,0)


        def continueStmt(self):
            return self.getTypedRuleContext(WovenParser.ContinueStmtContext,0)


        def throwStmt(self):
            return self.getTypedRuleContext(WovenParser.ThrowStmtContext,0)


        def getRuleIndex(self):
            return WovenParser.RULE_simpleStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleStmt" ):
                listener.enterSimpleStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleStmt" ):
                listener.exitSimpleStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleStmt" ):
                return visitor.visitSimpleStmt(self)
            else:
                return visitor.visitChildren(self)




    def simpleStmt(self):

        localctx = WovenParser.SimpleStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simpleStmt)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                self.returnStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 96
                self.printStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 97
                self.selfAssignment()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 98
                self.indexAssignment()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 99
                self.exprStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 100
                self.breakStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 101
                self.continueStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 102
                self.throwStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDecl(self):
            return self.getTypedRuleContext(WovenParser.FunctionDeclContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(WovenParser.IfStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(WovenParser.ForStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(WovenParser.WhileStmtContext,0)


        def classDecl(self):
            return self.getTypedRuleContext(WovenParser.ClassDeclContext,0)


        def tryStmt(self):
            return self.getTypedRuleContext(WovenParser.TryStmtContext,0)


        def getRuleIndex(self):
            return WovenParser.RULE_compoundStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundStmt" ):
                listener.enterCompoundStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompoundStmt" ):
                listener.exitCompoundStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompoundStmt" ):
                return visitor.visitCompoundStmt(self)
            else:
                return visitor.visitChildren(self)




    def compoundStmt(self):

        localctx = WovenParser.CompoundStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_compoundStmt)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.functionDecl()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.ifStmt()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.forStmt()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.whileStmt()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 5)
                self.state = 109
                self.classDecl()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 6)
                self.state = 110
                self.tryStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(WovenParser.FUNCTION, 0)

        def returnType(self):
            return self.getTypedRuleContext(WovenParser.ReturnTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(WovenParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(WovenParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(WovenParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(WovenParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(WovenParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(WovenParser.ParamListContext,0)


        def getRuleIndex(self):
            return WovenParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = WovenParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(WovenParser.FUNCTION)
            self.state = 114
            self.returnType()
            self.state = 115
            self.match(WovenParser.IDENTIFIER)
            self.state = 116
            self.match(WovenParser.LPAREN)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 144115188075871744) != 0):
                self.state = 117
                self.paramList()


            self.state = 120
            self.match(WovenParser.RPAREN)
            self.state = 121
            self.match(WovenParser.COLON)
            self.state = 122
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WovenParser.ParamContext)
            else:
                return self.getTypedRuleContext(WovenParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(WovenParser.COMMA)
            else:
                return self.getToken(WovenParser.COMMA, i)

        def getRuleIndex(self):
            return WovenParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = WovenParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.param()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 125
                self.match(WovenParser.COMMA)
                self.state = 126
                self.param()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(WovenParser.TypeNameContext,0)


        def IDENTIFIER(self):
            return self.getToken(WovenParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return WovenParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = WovenParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.typeName()
            self.state = 133
            self.match(WovenParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(WovenParser.TypeNameContext,0)


        def VOID(self):
            return self.getToken(WovenParser.VOID, 0)

        def getRuleIndex(self):
            return WovenParser.RULE_returnType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnType" ):
                listener.enterReturnType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnType" ):
                listener.exitReturnType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnType" ):
                return visitor.visitReturnType(self)
            else:
                return visitor.visitChildren(self)




    def returnType(self):

        localctx = WovenParser.ReturnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_returnType)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9, 10, 11, 12, 13, 57]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.typeName()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(WovenParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(WovenParser.TypeNameContext,0)


        def IDENTIFIER(self):
            return self.getToken(WovenParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(WovenParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(WovenParser.ExprContext,0)


        def getRuleIndex(self):
            return WovenParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):
